# zed-aider

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml  repomix-output.txt
.github/workflows/: ci.yml  release.yml
scripts/: build.sh  release.sh
src/: extension.rs  files.rs  lib.rs
src/api/: client.rs  mod.rs
src/commands/: files.rs  mod.rs
src/models/: mod.rs
