[package]
name = "zed-aider"
version = "0.2.0"
edition = "2021"
description = "A Zed extension for Aider integration"
authors = ["Asim Mughal <asimzm@outlook.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed-extension = { git = "https://github.com/zed-industries/zed", tag = "nightly" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
